configure input retriever