@@ -2,14 +2,14 @@ package org.acme.InputRetriever;
 
 import io.quarkus.runtime.annotations.CommandLineArguments;
 import lombok.extern.slf4j.Slf4j;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.*;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 @Slf4j
@@ -18,19 +18,19 @@ public class FileInputRetriever implements InputRetriever {
     @CommandLineArguments
     String[] args;
 
-//    public void printArgs() {
-//        log.info("args {}", args[0]);
-//    }
+    @ConfigProperty(name= "input.filepath")
+    String inputPath;
+
     @Override
-    public String asOneLine() throws IOException {
-        Path filePath= Paths.get(args[0]);
-        return new String(Files.readAllBytes(filePath));
+    public String asOneLine() throws Exception {
+        InputStream input = getClass().getClassLoader().getResourceAsStream(inputPath);
+        return new String(input.readAllBytes());
     }
 
     @Override
-    public List<String> asList() throws IOException {
-        Path filePath= Paths.get(args[0]);
-        List<String> inputStrings = Files.readAllLines(filePath);
-        return inputStrings;
+    public List<String> asList() throws Exception {
+        InputStream input = getClass().getClassLoader().getResourceAsStream(inputPath);
+        BufferedReader br = new BufferedReader(new InputStreamReader(input));
+        return br.lines().collect(Collectors.toList());
     }
 }
